fix(feed): fix feed avatar cut off

--- a/src/app/pages/dashboard/widgets/blurFeed/_blurFeed.scss
+++ b/src/app/pages/dashboard/widgets/blurFeed/_blurFeed.scss
@@ -63,7 +63,7 @@
       position: absolute;
       width: 30px;
       height: 30px;
-      right: -4px;
+      right: -2px;
       bottom: -4px;
       border: 2px solid #fff;
     }
